--- a/main.html
+++ b/main.html
@@ -7,37 +7,50 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table border="1" style="width: 100%; height: 100%">
       <!-- Your code here -->
 		<tr>
 			<td>
 				<table border="1">
-				<tr><th colspan = "2">Nested table 2</th></tr>
+					<tr><th colspan="2">Nested Table 2</th></tr>
+					<th>Column 1</th>
+					<th>Column 2</th>
 					<tr>
-						<th>Column 1</th>
-						<th>Column 2</th>
-						<tr>
-							<td>abc</td>
-							<td>def</td>
-					</tr>
-					</table>
-				<table border="2">
-					<tr><th>Nested Table 1</th></tr>
+						<td>abc</td>
+					<td>def</td>
+						</tr>
+				</table>
+			</td>
+			<td>
+				<table border="1">
+					<tr><th colspan="2">Nested Table 1</th></tr>
 					<td><ul>
 						<li>List item</li>
 						<li>List item</li>
 						<li>List item</li>
-					</ul></td>
+					</ul>
+					</td>
 				</table>
-				<table border="2">
-					<tr><th colspan="2">Nested table 3</th></tr>
-					<td><a href="#">Nested table</a></td>
-					<td>Demo Continued</td>
-				</table>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				<table border="1">
-					<tr><th>Nested Table 4</th></tr>
-					<tr><td style="background-color:black; color:white;">HTML</td></tr>
+					<tr><th colspan="2">Nested table 3</th></tr>	
+						<tr>
+						<td><a href="#">Nested Table</a></td>
+						<td>Demo Contiuned</td>
+							</tr>
 				</table>
+			</td>
+			<td>
+			<table border="1">
+		  <tr><th>Nested table 4</th></tr>
+				<tr>
+					<td style="background-color:black; color:white;">HTML</td>
+				</tr>
+			</table>
+			</td>
 		</tr>
     </table>
   </body>
