--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 		<tr>
 			<td>
 				<table border="1">
-					<tr><th colspan="2">Nested table 3</th></tr>	
+					<tr><th colspan="2">Nested Table 3</th></tr>	
 						<tr>
 						<td><a href="#">Nested Table</a></td>
 						<td>Demo Contiuned</td>
@@ -45,7 +45,7 @@
 			</td>
 			<td>
 			<table border="1">
-		  <tr><th>Nested table 4</th></tr>
+		  <tr><th>Nested Table 4</th></tr>
 				<tr>
 					<td style="background-color:black; color:white;">HTML</td>
 				</tr>
