--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
       <!-- Your code here -->
 		<tr>
 			<td>
-				<table border="1">
+				<table border="1" style=text-align:center;>
 					<tr><th colspan="2">Nested Table 2</th></tr>
 					<th>Column 1</th>
 					<th>Column 2</th>
@@ -24,7 +24,7 @@
 			<td>
 				<table border="1">
 					<tr><th colspan="2">Nested Table 1</th></tr>
-					<td><ul>
+					<td style="text-align:center;"><ul>
 						<li>List item</li>
 						<li>List item</li>
 						<li>List item</li>
